--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
       <div class="row">
         <div class="col-lg-8 offset-lg-2 col-12">
           <div class="input-group mb-3">
-            <input type="text" class="form-control news-input" placeholder="Recipient's username" aria-label="Recipient's username" aria-describedby="basic-addon2">
+            <input type="text" class="form-control news-input" placeholder="Your Email" aria-label="Recipient's username" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <span class="input-group-text" id="basic-addon2">
                 Subscribe
@@ -445,7 +445,7 @@
     <div class="container">
       <div class="row">
       <div class="col-lg-4 col-md-6 col-12">
-        <h3>ABOUT SADIYATECHNICAL</h3>
+        <h3>ABOUT WEBWONDERS</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing Nullam non ipsum posuere, blandit purus vitae, vestibulum turpis.</p>
       </div>
       <div class="col-lg-4 col-md-6 col-12 text-center nv-link">
